spreaded view on divisions for groups in timeline

--- a/sass/app/_timeline.scss
+++ b/sass/app/_timeline.scss
@@ -37,7 +37,7 @@
     display: block;
     overflow: hidden;
 
-    #groupPie {
+    .groupPies {
       float:left;
       width: 235px;
       height: 270px;
