divisional dropdown returned in planboard & 'bar-' class bug fix in statistics & improvements in dashboard widget preloaders

--- a/sass/app/_timeline.scss
+++ b/sass/app/_timeline.scss
@@ -154,8 +154,7 @@
           background-image: -o-linear-gradient(top, #4f824f, #406940);
           background-image: linear-gradient(to bottom, #4f824f, #406940);
           background-repeat: repeat-x;
-          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4f824f', 
-          endColorstr='#ff406940', GradientType=0);
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4f824f', endColorstr='#ff406940', GradientType=0);
         }
 
         .bar-BeschikbaarZuid {
@@ -166,8 +165,7 @@
           background-image: -o-linear-gradient(top, #e08a0c, #c77b0a);
           background-image: linear-gradient(to bottom, #e08a0c, #c77b0a);
           background-repeat: repeat-x;
-          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe08a0c', 
-          endColorstr='#ffc77b0a', GradientType=0);
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe08a0c', endColorstr='#ffc77b0a', GradientType=0);
         }
 
         .bar-BeschikbaarNoord {
@@ -178,8 +176,7 @@
           background-image: -o-linear-gradient(top, #1a1a1a, #050505);
           background-image: linear-gradient(to bottom, #1a1a1a, #050505);
           background-repeat: repeat-x;
-          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1a1a1a', 
-          endColorstr='#ff050505', GradientType=0);  
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1a1a1a', endColorstr='#ff050505', GradientType=0);
         }
 
         .bar-SchipperVanDienst {
@@ -190,8 +187,7 @@
           background-image: -o-linear-gradient(top, #e0c100, #c7ac00);
           background-image: linear-gradient(to bottom, #e0c100, #c7ac00);
           background-repeat: repeat-x;
-          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe0c100', 
-          endColorstr='#ffc7ac00', GradientType=0); 
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe0c100', endColorstr='#ffc7ac00', GradientType=0);
         }
 
         .bar-Unavailable {
@@ -202,8 +198,7 @@
           background-image: -o-linear-gradient(top, #a93232, #8f2b2b);
           background-image: linear-gradient(to bottom, #a93232, #8f2b2b);
           background-repeat: repeat-x;
-          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffa93232', 
-          endColorstr='#ff8f2b2b', GradientType=0);  
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffa93232', endColorstr='#ff8f2b2b', GradientType=0);
         }
 
         .bar-Unreached {
@@ -214,8 +209,7 @@
           background-image: -o-linear-gradient(top, #65619b, #514E7C);
           background-image: linear-gradient(to bottom, #65619b, #514E7C);
           background-repeat: repeat-x;
-          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff65619b', 
-          endColorstr='#ff514E7C', GradientType=0);  
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff65619b', endColorstr='#ff514E7C', GradientType=0);
         }
       }
 
