--- a/war/js/views/settings.html
+++ b/war/js/views/settings.html
@@ -79,7 +79,7 @@
           <fieldset>
         
             <div class="control-group">
-              <label class="control-label">First group of choice</label>
+              <label class="control-label">Eerste groep keuze</label>
               <select ng-model="settings.app.group" 
                       ng-options="option as value for (option, value) in groups">
               </select>
