--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -389,12 +389,12 @@
                 <!-- end groups list -->
 
                 <!-- divisions list -->
-                <!--<select ng-model="timeline.current.division" -->
-                        <!--ng-options="division.id as division.label for division in divisions"-->
-                        <!--ng-selected="timeline.current.division"-->
-                        <!--ng-change="requestTimeline()"-->
-                        <!--ng-show="divisions.length > 0">-->
-                <!--</select>-->
+                <select ng-model="timeline.current.division"
+                        ng-options="division.id as division.label for division in divisions"
+                        ng-selected="timeline.current.division"
+                        ng-change="changeDivision()"
+                        ng-show="divisions.length > 0">
+                </select>
                 <!-- end divisions list -->
 
               </div>
@@ -558,12 +558,12 @@
               <!-- end groups list -->
 
               <!-- divisions list -->
-              <!--<select ng-model="timeline.current.division" -->
-                      <!--ng-options="division.id as division.label for division in divisions"-->
-                      <!--ng-selected="timeline.current.division"-->
-                      <!--ng-change="requestTimeline()"-->
-                      <!--ng-show="divisions.length > 0">-->
-              <!--</select>-->
+              <select ng-model="timeline.current.division"
+                      ng-options="division.id as division.label for division in divisions"
+                      ng-selected="timeline.current.division"
+                      ng-change="changeDivision()"
+                      ng-show="divisions.length > 0">
+              </select>
               <!-- end divisions list -->
 
             </div>
@@ -634,9 +634,11 @@
             <div id="groupStats"
                  ng-repeat="agg in data.aggs">
 
-              <div id="groupPie-{{agg.division.id}}" class="groupPies"></div>
-              
-              <div class="groupStatInfo">
+              <div ng-show="groupPieHide[agg.division.id] || (timeline.current.division == 'all')">
+
+                <div id="groupPie-{{agg.division.id}}" class="groupPies"></div>
+
+                <div class="groupStatInfo">
                 <h3>{{agg.id | groupIdToName}} <span ng-hide="!agg.division.label">&nbsp; ({{ agg.division.label }})</span></h3>
                 <hr>
                 <ul>
@@ -686,6 +688,8 @@
                     </div>
                   </li>
                 </ul>
+              </div>
+
               </div>
 
             </div>
