enhancements for firstname & lastname

--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -38,9 +38,9 @@
     <div class="input-append">
       <input type="text" 
               class="span2 search-query" 
-              placeholder="{{ui.groups.searchfor}}" 
+              placeholder="{{ui.groups.searchFor}}"
               ng-model="search.query">
-      <button type="submit" class="btn"><i class="icon-search"></i>&nbsp;{{ui.groups.serach}}</button>
+      <button type="submit" class="btn"><i class="icon-search"></i>&nbsp;{{ui.groups.search}}</button>
     </div>
   </form>
   <!-- end search members -->
@@ -50,7 +50,7 @@
 <div class="tabbable tabs-left">
 
   <!-- tabs links -->
-  <ul class="nav nav-tabs nav-tabs-app" style="margin-right: 0px;">
+  <ul class="nav nav-tabs nav-tabs-app" style="margin-right: 0;">
     <!-- add group tab link -->
     <li class="{{(views.add==true) && 'active'}}"
         ng-show="views.add">
@@ -112,6 +112,8 @@
   <!-- tabs content -->
   <div class="tab-content">
 
+
+
     <!-- add group tab -->
     <div class="tab-pane {{(views.add==true) && 'active'}}" 
           id="addGroupTab" 
@@ -145,6 +147,8 @@
     </div>
     <!-- end add group tab -->
 
+
+
     <!-- edit group tab -->
     <div class="tab-pane {{(views.edit==true) && 'active'}}" 
           id="editGroupTab" 
@@ -177,6 +181,8 @@
         <!-- end group form -->
     </div>
     <!-- edit group tab -->
+
+
 
     <!-- new member tab -->
     <div class="tab-pane {{(views.member==true) && 'active'}}" 
@@ -216,14 +222,25 @@
               </div>
             </div>
             <hr>
+
             <div class="control-group">
-              <label class="control-label">{{ui.groups.name}}</label>
+              <label class="control-label">{{ui.groups.firstName}}</label>
               <div class="controls">
-                <input  type="text" 
-                        class="span4" 
-                        ng-model="memberForm.name">
+                <input  type="text"
+                        class="span4"
+                        ng-model="memberForm.firstName">
               </div>
             </div>
+
+            <div class="control-group">
+              <label class="control-label">{{ui.groups.lastName}}</label>
+              <div class="controls">
+                <input  type="text"
+                        class="span4"
+                        ng-model="memberForm.lastName">
+              </div>
+            </div>
+
             <div class="control-group">
               <label class="control-label">{{ui.groups.email}}</label>
               <div class="controls">
@@ -292,10 +309,12 @@
     </div>
     <!-- end new member tab -->
 
+
+
     <!-- search tab -->
     <div class="tab-pane {{(views.search==true) && 'active'}}" id="searchTab" ng-show="views.search">
       <div class="tab-header">
-        <h3 class="pull-left">{{ui.groups.serachFor}} '{{search.queried}}'</h3>
+        <h3 class="pull-left">{{ui.groups.searchedFor}} '{{search.queried}}'</h3>
         <button type="button" 
                 ng-click="closeTabs()" 
                 class="btn pull-right">{{ui.groups.close}}</button>
@@ -345,6 +364,8 @@
       </div>
     </div>
     <!-- end search tab -->
+
+
 
     <!-- group tab -->
     <div  class="tab-pane {{(views.view==true) && 'active'}}"
@@ -398,7 +419,8 @@
                         ng-model="selectionMaster"
                         ng-click="toggleSelection(group, selectionMaster)">
               </th>
-              <th><a ng-click="sorter='name'">{{ui.groups.name}}</a></th>
+              <th><a ng-click="sorter='resources.firstName'">{{ui.groups.firstName}}</a></th>
+              <th><a ng-click="sorter='resources.lastName'">{{ui.groups.lastName}}</a></th>
               <th><a ng-click="sorter='resources.role'">{{ui.groups.role}}</a></th>
               <th><a ng-click="sorter='resources.phoneAddress'">{{ui.groups.tel}}</a></th>
               <th></th>
@@ -411,13 +433,16 @@
                         ng-model="selection[member.uuid]"
                         ng-checked="selectionMaster">
               </td>
-              <td><a href="#/profile/{{member.uuid}}#profile">{{member.name}}</a></td>
-              <td>{{member.resources.role|translateRole}}</td>
+              <td>{{member.resources.firstName}}</td>
+              <td>{{member.resources.lastName}}</td>
+              <td>{{member.resources.role | translateRole}}</td>
               <td>{{member.resources.PhoneAddress}}</td>
               <td>
                 <div class="pull-right">
-                  <a href="#/profile/{{member.uuid}}#edit" 
-                    class="btn btn-mini"><i class="icon-edit"></i></a>&nbsp;
+                  <a href="#/profile/{{member.uuid}}#profile"
+                     class="btn btn-mini"><i class="icon-user"></i></a>&nbsp;
+                  <a href="#/profile/{{member.uuid}}#edit"
+                     class="btn btn-mini"><i class="icon-edit"></i></a>&nbsp;
                   <button type="submit" 
                           ng-click="removeMember(member.uuid, group.uuid)" 
                           class="btn btn-danger btn-mini"><i class="icon-trash icon-white"></i></button>
@@ -436,6 +461,8 @@
       </div>
     </div>
     <!-- end group tab -->
+
+
 
   </div>
   <!-- end tabs content -->
