--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -222,7 +222,6 @@
               </div>
             </div>
             <hr>
-
             <div class="control-group">
               <label class="control-label">{{ui.groups.firstName}}</label>
               <div class="controls">
@@ -231,7 +230,6 @@
                         ng-model="memberForm.firstName">
               </div>
             </div>
-
             <div class="control-group">
               <label class="control-label">{{ui.groups.lastName}}</label>
               <div class="controls">
@@ -240,7 +238,6 @@
                         ng-model="memberForm.lastName">
               </div>
             </div>
-
             <div class="control-group">
               <label class="control-label">{{ui.groups.email}}</label>
               <div class="controls">
@@ -410,6 +407,7 @@
       <p ng-hide="(data.members[group.uuid]|filter:filtered).length > 0">
         {{ui.groups.noMembers}}
       </p>
+
       <div ng-show="(data.members[group.uuid]|filter:filtered).length > 0">
         <table class="table table-striped">
           <thead>
@@ -419,15 +417,15 @@
                         ng-model="selectionMaster"
                         ng-click="toggleSelection(group, selectionMaster)">
               </th>
-              <th><a ng-click="sorter='resources.firstName'">{{ui.groups.firstName}}</a></th>
-              <th><a ng-click="sorter='resources.lastName'">{{ui.groups.lastName}}</a></th>
-              <th><a ng-click="sorter='resources.role'">{{ui.groups.role}}</a></th>
-              <th><a ng-click="sorter='resources.phoneAddress'">{{ui.groups.tel}}</a></th>
+              <th><a ng-click="reverse=!reverse; sorter='resources.firstName'">{{ui.groups.firstName}}</a></th>
+              <th><a ng-click="reverse=!reverse; sorter='resources.lastName'">{{ui.groups.lastName}}</a></th>
+              <th><a ng-click="reverse=!reverse; sorter='resources.role'">{{ui.groups.role}}</a></th>
+              <th><a ng-click="reverse=!reverse; sorter='resources.phoneAddress'">{{ui.groups.tel}}</a></th>
               <th></th>
             </tr>
           </thead>
           <tbody>
-            <tr ng-repeat="member in data.members[group.uuid]|filter:filtered|orderBy:sorter:true">
+            <tr ng-repeat="member in data.members[group.uuid]|filter:filtered|orderBy:sorter:reverse">
               <td>
                 <input type="checkbox"
                         ng-model="selection[member.uuid]"
