--- a/sass/app/_frame.scss
+++ b/sass/app/_frame.scss
@@ -133,46 +133,56 @@
     margin-top: 0px;
     text-align: right;
     line-height: 14px;
-
-    span.muted {
-      position: absolute;
-      top: 5px;
-      right: 255px;
-      float: right;
-      width: 200px;
-
-      a {
-        color: #ddd;
-      }
-    }
   }
 }
 
 
 #download-footer {
-  button {
-    position: absolute;
-    top: 0;
-    right: 0;
-    float: right;
-    /* padding-top: 10px; */
-    /* padding-bottom: 8px; */
-    width: 240px;
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 
-    span.entypo {
-      margin-right: 5px;
-      height: 24px;
-      /* text-shadow: 1px 1px 0 black; */
-      /* text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25); */
-      text-shadow: none;
-      font-size: 32px;
-      /* line-height: 30px; */
-    }
+    li {
+      display: inline;
+      float: right;
+      margin-left: 10px;
 
-    span.msg {
-      position: relative;
-      top: -5px;
-      font-size: 14px;
+
+      button {
+        //position: absolute;
+        //top: 0;
+        //right: 0;
+        //float: right;
+        /* padding-top: 10px; */
+        /* padding-bottom: 8px; */
+        // width: 240px;
+
+        span.entypo {
+          margin-right: 5px;
+          height: 24px;
+          /* text-shadow: 1px 1px 0 black; */
+          /* text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25); */
+          text-shadow: none;
+          font-size: 32px;
+          /* line-height: 30px; */
+        }
+
+        span.msg {
+          position: relative;
+          top: -5px;
+          font-size: 14px;
+        }
+
+        span.muted {
+          //width: 200px;
+
+          a {
+            color: #ddd;
+          }
+        }
+
+      }
     }
   }
 }
