--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -178,7 +178,8 @@
             </div>
           </div>
 
-          <div class="control-group" ng-hide="app.resources.role > 1">
+          <div class="control-group"
+               ng-hide="app.resources.role > 1 || views.user">
             <label class="control-label">{{ui.profile.password}}</label>
             <div class="controls">
               <input  type="text" 
