--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -439,11 +439,12 @@
                 </span>
               </th>
               <th>
-                <a ng-click="toggleSorter('resources.phoneAddress')">{{ui.groups.tel}}</a>&nbsp;
-                <span ng-show="(sorter=='resources.phoneAddress')">
-                  <span ng-hide="reverse">&#9650;</span>
-                  <span ng-show="reverse">&#9660;</span>
-                </span>
+                {{ui.groups.tel}}
+                <!--<a ng-click="toggleSorter('resources.phoneAddress')">{{ui.groups.tel}}</a>&nbsp;-->
+                <!--<span ng-show="(sorter=='resources.phoneAddress')">-->
+                  <!--<span ng-hide="reverse">&#9650;</span>-->
+                  <!--<span ng-show="reverse">&#9660;</span>-->
+                <!--</span>-->
               </th>
               <th></th>
             </tr>
