--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -431,7 +431,7 @@
                   <span ng-show="reverse">&#9660;</span>
                 </span>
               </th>
-              <th>
+              <th ng-hide="config.profile.smartAlarm">
                 <a ng-click="toggleSorter('resources.role')">{{ui.groups.role}}</a>&nbsp;
                 <span ng-show="(sorter=='resources.role')">
                   <span ng-hide="reverse">&#9650;</span>
@@ -458,7 +458,7 @@
               </td>
               <td>{{member.resources.firstName}}</td>
               <td>{{member.resources.lastName}}</td>
-              <td>{{member.resources.role | translateRole}}</td>
+              <td ng-hide="config.profile.smartAlarm">{{member.resources.role | translateRole}}</td>
               <td>{{member.resources.PhoneAddress}}</td>
               <td>
                 <div class="pull-right">
