--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -117,7 +117,8 @@
           <fieldset>
 
             <!-- broadcasting types -->
-            <div class="control-group">
+            <div class="control-group"
+                 ng-hide="config.profile.smartAlarm">
               <label class="control-label">{{ui.message.broadcast}}</label>
 
               <div  class="btn-group"  
