--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -77,8 +77,10 @@
                 <span ng-show="app.resources.role > 1">{{group.name}}, </span>
               </span>
           </dd>
-          <dt>{{ui.profile.role}}</dt>
-            <dd>{{data.resources.role|translateRole}}</dd>
+
+          <dt ng-hide="config.profile.smartAlarm">{{ui.profile.role}}</dt>
+            <dd ng-hide="config.profile.smartAlarm">{{data.resources.role|translateRole}}</dd>
+
           <dt>{{ui.profile.email}}</dt>
             <dd>{{data.resources.EmailAddress}}</dd>
           <dt>{{ui.profile.phone}}</dt>
