--- a/war/js/views/login.html
+++ b/war/js/views/login.html
@@ -41,8 +41,9 @@
 		  <button class="btn btn-large btn-primary" type="submit">{{ui.login.button_login}}</button>
 		  <p>
 		  	<small>
-		  		<a ng-click="views.forgot=true; views.login=false;">{{ui.login.forgot_password}}</a>
-		  		&nbsp;|&nbsp;
+		  		<a ng-click="views.forgot=true; views.login=false;"
+            ng-hide="config.profile.smartAlarm">{{ui.login.forgot_password}}</a>
+		  		<span ng-hide="config.profile.smartAlarm">&nbsp;|&nbsp;</span>
 		  		<a ng-click="views.help=true">{{ui.help.help}}</a>
 		  	</small>
 		  </p>
