latest bulk improvements for firedep

--- a/war/js/views/settings.html
+++ b/war/js/views/settings.html
@@ -44,7 +44,8 @@
               </select>
             </div>
         
-            <div class="control-group">
+            <div class="control-group"
+                  ng-hide="config.profile.smartAlarm">
               <label class="control-label">Google account</label>
               <button class="btn btn-success" 
                       type="button"
