language correction for smart alarming dashboard widget

--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -24,7 +24,7 @@
          style="height: 100px;">
       <h4 style="margin: -5px 0 10px 0; padding: 0;">Huidige Status</h4>
       <span style="color: {{ app.guard.currentState.color }}">{{ app.guard.currentState.label }}</span><br>
-      StandBy as <span class="label label-inverse" style="margin-left: 5px;">{{ app.guard.role.toUpperCase() }}</span>
+      StandBy als <span class="label label-inverse" style="margin-left: 5px;">{{ app.guard.role.toUpperCase() }}</span>
     </div>
   </div>
   <!--end Smart Alarm greetings-->
