--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -30,7 +30,9 @@
           <span class="entypo">&#9998;</span> {{ui.profile.edit}}
         </a>
       </li>
-      <li class="{{(views.password==true) && 'active'}}" ng-show="views.user">
+      <li class="{{(views.password==true) && 'active'}}"
+          ng-show="views.user"
+          ng-hide="config.profile.smartAlarm">
         <a href="#passwordTab" 
             data-toggle="tab"
             ng-click="fixTabHeight('passwordTab'); setViewTo('password')">
@@ -181,7 +183,7 @@
           </div>
 
           <div class="control-group"
-               ng-hide="app.resources.role > 1 || views.user">
+               ng-hide="app.resources.role > 1 || views.user || config.profile.smartAlarm">
             <label class="control-label">{{ui.profile.password}}</label>
             <div class="controls">
               <input  type="text" 
