--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -314,7 +314,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr ng-repeat="candidate in candidates">
+            <tr ng-repeat="candidate in candidates"">
               <td>{{$index + 1}}</td>
               <td>{{candidate.name}}</td>
               <td>
